--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,23 @@ coverage
 build/Release
 
 # Dependency directory
-# Commenting this out is preferred by some people, see
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-node_modules
+# Deployed apps should consider commenting this line out:
+# see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 
-# Users Environment Variables
-.lock-wscript
+services/tmp/*
+web/*/.sass-cache/*
+
+web/**/components/*
+
+!web/admin/public/sass/components/*
+
+web/*/public/.sass-cache/*
+web/*/public/components/*
+
+node_modules/*
+!node_modules/shnappy
+node_modules/shnappy/tmp/*
+
+.idea/workspace.xml
+
+.idea/*
