--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/appmechanix/shnappy-model",
   "dependencies": {
-    "mongoose": "^3.8.23",
+    "mongoose": "3.8.*",
     "node-uuid": "^1.4.2"
   }
 }
